# silero-api-server

./: README.md  ha_tts.py  pyproject.toml  requirements.txt  test_model_v5.py
silero_api_server/: __main__.py  morph_utils.py  server.py  tts.py  wyoming_server.py
