[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "silero-api-server"
authors = [
  { name="NW15D", email="[EMAIL_ADDRESS]" },
]
description = "A simple FastAPI server to host Silero TTS"
readme = "README.md"
license = "MIT"
version = "1.0.0"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fastapi",
  "loguru",
  "pydantic",
  "python-dotenv",
  "torch==2.7.1+cu126",
  "torchaudio==2.7.1+cu126",
  "uvicorn",
  "soundfile",
  "numpy",
  "scipy",
  "pydub",
  "requests",
  "pymorphy3",
  "pymorphy3-dicts-ru",
  "pymorphy3-dicts-uk",
  "wyoming",
  "transliterate",
]

[project.urls]
"Homepage" = "https://github.com/NW15D/silero-api-server"
"Bug Tracker" = "https://github.com/NW15D/silero-api-server/issues"

[tool.hatch.build.targets.wheel]
only-include = ["silero_api_server"]
